Reetan.Nayak Dev 25/force-app/main/default/objects/Twitterapp__c/Twitterapp__c.object-meta.xml
<CustomObject>
    <label>Twitterapp</label>
    <nameField>
        <label>Twitterapp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitterapp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>