Reetan.Nayak Dev 25/force-app/main/default/objects/Twitterapp__c/fields/Access_token_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_token_URL__c</fullName>
    <label>Access token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>