Reetan.Nayak Dev 25/force-app/main/default/objects/Twitterapp__c/fields/Authorize_URL__c.field-meta.xml
<CustomField>
    <fullName>Authorize_URL__c</fullName>
    <label>Authorize URL</label>
    <type>Url</type>
</CustomField>