Reetan.Nayak Dev 25/force-app/main/default/objects/Twitterapp__c/fields/Consumer_key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_key__c</fullName>
    <label>Consumer_key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>