Reetan.Nayak Dev 25/force-app/main/default/objects/Twitterapp__c/fields/Request_token_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_token_URL__c</fullName>
    <label>Request token URL</label>
    <type>Url</type>
</CustomField>